p2/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-one-service
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-two-service
                port:
                  number: 80
    - host: app3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-three-service
                port:
                  number: 80

    # 🟢 Règle par défaut si aucun host n’est précisé
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-three-service
                port:
                  number: 80
